src/ui/lidarr_ui/root_folders/snapshots/managarr__ui__lidarr_ui__root_folders__root_folders_ui_tests__tests__snapshot_tests__AddRootFolderSelectMetadataProfile.snap
---
source: src/ui/lidarr_ui/root_folders/root_folders_ui_tests.rs
expression: output
---
─────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
   Path                                                                                            Free Space                        Unmapped Folders                
=> /nfs                                                                                            204800.00 GB                      0                               
                                                                                                                                                                     
                                                                                                                                                                     
                                                                                                                                                                     
                            ╭───────────────────────────────────────────  Add Root Folder  ───────────────────────────────────────────╮                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Name: │Test Root Folder                                 │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                  ╭─────────────────────────────────────────────────╮    │                              
                            │                                            Path: │/nfs/music                                       │    │                              
                            │                                     ╭───────────────────────────────╮──────────────────────────────╯    │                              
                            │                                     │Standard                       │──────────────────────────────╮    │                              
                            │                                     │                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                              Monitor│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                 Qual│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                Metad│                               │                            ▼ │    │                              
                            │                                     │                               │──────────────────────────────╯    │                              
                            │                                     │                               │──────────────────────────────╮    │                              
                            │                                     ╰───────────────────────────────╯                              │    │                              
                            │                                                  ╰─────────────────────────────────────────────────╯    │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │                                                                                                         │                              
                            │╭───────────────────────────────────────────────────╮╭──────────────────────────────────────────────────╮│                              
                            ││                       Save                        ││                      Cancel                      ││                              
                            │╰───────────────────────────────────────────────────╯╰──────────────────────────────────────────────────╯│                              
                            ╰─────────────────────────────────────────────────────────────────────────────────────────────────────────╯
